--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <div class="home__content grid">
             <div class="home__social">
               <a
-                href="https://www.linkedin.com/in/deepak-kushwaha-6b98a3289/"
+                href="https://www.linkedin.com/in/akash-kumar-a17228255/"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -80,7 +80,7 @@
               </a>
 
               <a
-                href="https://github.com/deepakkushwahax"
+                href="https://github.com/akasharya01"
                 target="_blank"
                 class="home__social-icon"
               >
@@ -113,13 +113,13 @@
                     class="home__blob-img"
                     x="-69"
                     y="-36"
-                    xlink:href="assets/img/about.png"
+                    xlink:href="assets/img/akash.jpg"
                   />
                 </g>
               </svg>
             </div>
             <div class="home__data">
-              <h1 class="home__title">Hi, I'm Deepak Kushwaha</h1>
+              <h1 class="home__title">Hi, I'm Akash Kumar</h1>
               <h3 class="home__subtitle">
                 DevOps Engineer 
                 <!---<strong>Babu Banarasi Das University </strong>, Lucknow. --->
@@ -151,11 +151,11 @@
         <span class="section__subtitle">My introduction</span>
 
         <div class="about__container container grid">
-          <img src="assets\img\about.png" alt="" class="about__img" />
+          <img src="assets\img\akash.png" alt="" class="about__img" />
 
           <div class="about__data">
             <p class="about__description">
-              Hey! I'm Deepak, a final student of Babu Banarasi Das University.I'm more interested in Cloud Computing and Devops automations tools like Docker, Kubernetes, CICD pipelines etc..
+              Hey! I'm Akash, student of Babu Banarasi Das University.I'm more interested in Cloud Computing and Devops automations tools like Docker, Kubernetes, CICD pipelines etc..
 I'm also doing my project and looking for open-source contribution.
 <br>
 <br>
@@ -193,7 +193,7 @@ I'm also doing my project and looking for open-source contribution.
             </div>
 
             <div class="about__buttons">
-              <a download="" href="assets\Deepak's Resume ++.pdf" class="button button--flex">
+              <a download="" href="assets\Akash.pdf" class="button button--flex">
                 Download CV<i class="fas fa-download button__icon"></i>
               </a>
             </div>
@@ -396,7 +396,7 @@ I'm also doing my project and looking for open-source contribution.
                 <div>
                   <h3 class="qualification__title">SLBS</h3>
                   <span class="qualification__subtitle"
-                    >R.I.C <br />High School</span
+                    >J,M.S.I.C <br />High School</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -428,7 +428,7 @@ I'm also doing my project and looking for open-source contribution.
                           <i
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
-                          <p>Scored 79%</p>
+                          <p>Scored 82.5%</p>
                         </li>
                         <li class="services__modal-service">
                           <i
@@ -458,7 +458,7 @@ I'm also doing my project and looking for open-source contribution.
                 <div>
                   <h3 class="qualification__title">Class 12th</h3>
                   <span class="qualification__subtitle"
-                    >G.I.C <br />Kushinagar</span
+                    >H.R.I.C <br />Sant Kabir Nagar</span
                   >
                   <div class="qualification__calender">
                     <i class="uil uil-calendar-alt"></i>
@@ -483,14 +483,14 @@ I'm also doing my project and looking for open-source contribution.
                           ></i>
                           <p>
                             Subjects studied: Physics, Chemistry, Maths,
-                            English, Statistics , Hindi.
+                            English, Hindi.
                           </p>
                         </li>
                         <li class="services__modal-service">
                           <i
                             class="uil uil-check-circle services__moda-icon"
                           ></i>
-                          <p>Scored 74%</p>
+                          <p>Scored 82%</p>
                         </li>
                       </ul>
                     </div>
@@ -550,7 +550,7 @@ I'm also doing my project and looking for open-source contribution.
                             class="uil uil-check-circle services__modal-icon"
                           ></i>
                           <p>
-                            Club Advisor for GeekHub.
+                            Club Advisor for GeetHub.
                           </p>
                         </li>
                         <li class="services__modal-service">
@@ -785,7 +785,7 @@ I'm also doing my project and looking for open-source contribution.
               <div>
                 <h3 class="contact__title">Contact Me</h3>
                 <span class="contact__subtitle"
-                  ><a href="tel:7523038033"></a>7523038033</span
+                  ><a href="tel:9372918993"></a>9372918993</span
                 >
               </div>
             </div>
@@ -796,7 +796,7 @@ I'm also doing my project and looking for open-source contribution.
               <div>
                 <h3 class="contact__title">Email</h3>
                 <span class="contact__subtitle"
-                  >deepakkushwaha7523@gmail.com</span
+                  >akashk82701@gmail.com</span
                 >
               </div>
             </div>
@@ -807,7 +807,7 @@ I'm also doing my project and looking for open-source contribution.
               <div>
                 <h3 class="contact__title">Location</h3>
                 <span class="contact__subtitle"
-                  >Gurgaon, India</span
+                  >Lucknow, India</span
                 >
               </div>
             </div>
@@ -839,7 +839,7 @@ I'm also doing my project and looking for open-source contribution.
 
             <div>
               <a
-                href=" mailto: deepakkushwaha7523@gmail.com?subject=Testing out mailto! &body=This is only a test!"
+                href=" mailto: akashk82701@gmail.com?subject=Testing out mailto! &body=This is only a test!"
                 class="button button--flex"
               >
                 Send Message
@@ -856,7 +856,7 @@ I'm also doing my project and looking for open-source contribution.
       <div class="footer__bg">
         <div class="footer__container container grid">
           <div>
-            <h1 class="footer__title">Deepak</h1>
+            <h1 class="footer__title">Akash</h1>
             <span class="footer__subtitle"
               >Computer Application Student</span
             >
@@ -876,7 +876,7 @@ I'm also doing my project and looking for open-source contribution.
 
           <div class="footer__socials">
             <a
-              href="https://www.instagram.com/deepakkushwaha_x/"
+              href="https://www.instagram.com/akasharya.01/"
               class="footer__social"
               target="__blank"
             >
@@ -884,7 +884,7 @@ I'm also doing my project and looking for open-source contribution.
             </a>
 
             <a
-              href="https://twitter.com/Deepakkushwahax"
+              href="https://x.com/Akasharya_01"
               target="__blank"
               class="footer__social"
             >
